--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Who We Are</a></li>
+        <li><a href="/aboutus">Who We Are</a></li>
         <li><a href="#">Masterpiece Moments</a></li>
         <li><a href="#">The Entrepreneurs Within</a></li>
         <li><a href="#">VisionVault Exchange</a></li>
