provision to add images
images now acn be added .. i have used os to do this with the help of flask

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -195,8 +195,8 @@ body{
                     <br><br>EDC was established with a vision to empower students, create job opportunities, and contribute to the nation's development.<br><br>Initial activities included meetings with faculty, agenda discussions, and the launch of E-Awareness campaigns.</p>
                 </div>
             </div>
-            <div class="timeline-item" data-text="2016-2018">
-                <div class="timeline__content"><img class="timeline__img" src="D:\projects\EDC_Website\static\images\2017.jpg" />
+            <div class="timeline-item" data-text="2016-2018" >
+                <div class="timeline__content"><img class="timeline__img" src="{{img1}}" />
                     <h2 class="timeline__content-title">Growth and Expansion</h2>
                     <p class="timeline__content-desc">EDC quickly gained momentum, organizing events like E-Conclave, E-Awareness campaigns, and E-Week, creating a buzz around entrepreneurship on the campus.<br><br>The launch of the EDC Course marked a pivotal moment, providing structured education on entrepreneurship to REC students.<br><br>The board members actively engaged in faculty meetings, and an E-Cell Membership drive further solidified the EDC's presence.</p>
                 </div>
