--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EDC Evolution</title>
-  <script type="text/javascript" 
-    src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     </script> 
   <style>
 @import url('https://fonts.googleapis.com/css?family=Cardo|Pathway+Gothic+One');
@@ -180,8 +183,30 @@ body{
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
+	<nav class="navbar navbar-dark bg-dark navbar-fixed-top">
+		<div class="container-fluid">
+		  <div class="navbar-header">
+			<button type="button" class="navbar-toggle"  data-toggle="collapse" data-target="#myNavbar">
+			  <span class="icon-bar"></span>
+			  <span class="icon-bar"></span>
+			  <span class="icon-bar"></span>                        
+			</button>
+			<a class="navbar-brand" href="#">E-Cell of REC</a>
+		  </div>
+		  <div class="collapse navbar-collapse" id="myNavbar">
+			<ul class="nav navbar-nav">
+			  <li class="active"><a href="/">Home</a></li>
+			  <li><a href="/aboutus">Who We Are</a></li>
+			  <li><a href="#masterpiece-moments">Masterpiece Moments</a></li>
+			  <li><a href="#entrepreneurs-within">The Entrepreneurs Within</a></li>
+			  <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
+			</ul>
+		  </div>
+		</div>
+	  </nav>
+	  
     <div class="timeline-container" id="timeline-1">
         <div class="timeline-header">
             <h2 class="timeline-header__title">Footprints in Time</h2>
