--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,66 @@
 body {
-    background-color:rgb(12, 12, 12);
+    background-color:rgb(0, 0, 0);
+    position: relative;
 }
+
+.section {
+    padding: 50px 0;
+    color: white;
+    text-align: center;
+  }
+
+  #we_are {
+    color: white;
+    text-align:justify;
+    margin: 10%;
+  }
+  #who-we-are p {
+    font-size: 20px;
+    line-height: 1.6;
+    
+    text-align:left;
+    padding: 20px;
+    margin: 0;
+    border-left: 4px solid #007bff; /* Left border with a color */
+    transition: all 0.3s ease; /* Smooth transition */
+  }
+  
+  #who-we-are p:hover {
+    transform: scale(1.02); /* Slightly scales the paragraph on hover */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow on hover */
+  }
+  #myNavbar{
+    color: #007bff;
+  }
+  h1,h2{
+    color: #007bff;
+    margin-bottom: 30px;
+  }
+
+  .vision-mission {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px;
+  }
+
+  .vision-mission-item {
+    width: 45%;
+    background-color: #111;
+    border-radius: 8px;
+    padding: 20px;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .vision-mission-item:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+  }
+
+  .vision-mission h3 {
+    color: #007bff;
+  }
+
+  .vision-mission p {
+    line-height: 1.6;
+  }
