--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,8 @@
   <link rel="stylesheet" href="static/style.css">
 
   <style>
-    body {
-      position: relative;
-    }
+    
 
-    .section {
-      padding: 50px 0;
-      text-align: center;
-    }
   </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -35,6 +29,7 @@
       <a class="navbar-brand" href="/">E-Cell of REC</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
+      <strong>
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/aboutus">Who We Are</a></li>
@@ -42,6 +37,7 @@
         <li><a href="#entrepreneurs-within">The Entrepreneurs Within</a></li>
         <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
       </ul>
+    </strong>
     </div>
   </div>
 </nav>
@@ -50,10 +46,44 @@
   <h2>Home Section</h2>
   <p>This is the home section.</p>
 </div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div id="who-we-are" class="section">
-  <h2>Who We Are</h2>
-  <p>This is the "Who We Are" section.</p>
+      
+      <div id="we_are">
+        <h1>Who We Are</h1>
+        <p>
+          
+      The Entrepreneurship development cell of REC is committed to creating a high-impact entrepreneurial ecosystem and expanding it to society through initiatives like interactive sessions, competitions, conferences, and business incubation services. With close to 25 years of existence, the E-Cell at the College takes pride in having equipped entrepreneurs and their ventures. In the process, EDC had crossed many milestones by creating many first-generation entrepreneurs backing them up during their incubating days.
+      <br><a href="/aboutus" class="learn-more-link" style="padding-left: 90%;">Learn More</a>
+    </p>
+  </div>
+      <div class="vision-mission">
+        <div class="vision-mission-item">
+          <h2>Vision</h2>
+          <p>
+            To identify and empower Student Entrepreneurs for Job Creation and Wealth Generation aiding in the development of the nation.To create an entrepreneurial ecosystem that provides the platform for individuals with creative minds and ideas with potential for substantial business opportunities.
+          
+          </p>
+        </div>
+
+        <div class="vision-mission-item">
+          <h2>Mission</h2>
+          <p>
+            
+            To pragmatically educate the various nuances of Entrepreneurship imbibed with talent nourishment and capacity building.To provide the right environment and identify opportunities to develop and empower globally competent entrepreneurs.To set up an ecosystem for experimenting, learning, and to incubate companies in their early stages of growth.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
 <br>
 <br>
