--- a/templates/index.html
+++ b/templates/index.html
@@ -43,17 +43,25 @@
 </nav>
 
 <div id="home" class="section">
-  <h2>Home Section</h2>
-  <p>This is the home section.</p>
+  <div class="hero">
+    
+    <div class="lamp-container">    
+      <img src="{{img1}}" alt="" class="lamp">
+        <img src="{{img2}}" alt="" class="light" id="light">
+    </div>
+    <input type="checkbox" id="pull-chain"  />
+      <div id="chain">
+        <label for="pull-chain" id="handle"></label>
+      </div>
+    <div class="text-container">
+      
+      <h1>Entrepreneurship <br> Development Cell</h1>
+      
+      <p>EXPLORE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; INCUBATE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; INNOVATE</p>
+    </div>
+    
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+</div>
 <div id="who-we-are" class="section">
       
       <div id="we_are">
@@ -107,6 +115,9 @@
   <h2>VisionVault Exchange</h2>
   <p>This is the "VisionVault Exchange" section.</p>
 </div>
+
+
+<script src="static/index.js"></script>
 
 </body>
 </html>
