--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,8 @@
 body {
     background-color:rgb(0, 0, 0);
     position: relative;
+    font-family: "Open Sans", sans-serif;
+
 }
 /* home css */
 .hero{
