--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -17,31 +17,31 @@
 	</style>
 
 </head>
-
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
 	<nav class="navbar navbar-dark bg-dark navbar-fixed-top">
-		<div class="container-fluid">
-		  <div class="navbar-header">
-			<button type="button" class="navbar-toggle"  data-toggle="collapse" data-target="#myNavbar">
-			  <span class="icon-bar"></span>
-			  <span class="icon-bar"></span>
-			  <span class="icon-bar"></span>                        
-			</button>
-			<a class="navbar-brand" href="/">E-Cell of REC</a>
-		  </div>
-		  <div class="collapse navbar-collapse" id="myNavbar">
-			<ul class="nav navbar-nav">
-			  <li class="active"><a href="/">Home</a></li>
-			  <li><a href="/aboutus">Who We Are</a></li>
-			  <li><a href="#masterpiece-moments">Masterpiece Moments</a></li>
-			  <li><a href="#entrepreneurs-within">The Entrepreneurs Within</a></li>
-			  <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
-			</ul>
-		  </div>
+	  <div class="container-fluid">
+		<div class="navbar-header">
+		  <button type="button" class="navbar-toggle"  data-toggle="collapse" data-target="#myNavbar">
+			<span class="icon-bar" color:white></span>></span>
+			<span class="icon-bar" color:white></span>
+			<span class="icon-bar" color:white></span>                        
+		  </button>
+		  <a class="navbar-brand" href="/">E-Cell of REC</a>
 		</div>
-	  </nav>
-	  
+		<div class="collapse navbar-collapse" id="myNavbar">
+		  <strong>
+		  <ul class="nav navbar-nav">
+			<li class="active"><a href="/">Home</a></li>
+			<li><a href="/aboutus">Who We Are</a></li>
+			<li><a href="#masterpiece-moments">Masterpiece Moments</a></li>
+			<li><a href="/team">The Entrepreneurs Within</a></li>
+			<li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
+		  </ul>
+		</strong>
+		</div>
+	  </div>
+	</nav>	  
 	  <div class="intro">
 		<h1>Footprints in Time</h1>
 	  </div>
