--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/aboutus">Who We Are</a></li>
         <li><a href="#masterpiece-moments">Masterpiece Moments</a></li>
-        <li><a href="#entrepreneurs-within">The Entrepreneurs Within</a></li>
+        <li><a href="/team">The Entrepreneurs Within</a></li>
         <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
       </ul>
     </strong>
@@ -85,7 +85,8 @@
           <h2>Mission</h2>
           <p>
             
-            To pragmatically educate the various nuances of Entrepreneurship imbibed with talent nourishment and capacity building.To provide the right environment and identify opportunities to develop and empower globally competent entrepreneurs.To set up an ecosystem for experimenting, learning, and to incubate companies in their early stages of growth.
+            To pragmatically educate the various nuances of Entrepreneurship imbibed with talent nourishment and capacity building. To provide the right environment and identify opportunities to develop and empower globally competent entrepreneurs.
+            To set up an ecosystem for experimenting, learning, and to incubate companies in their early stages of growth.
           </p>
         </div>
       </div>
