created an team page structure

--- a/templates/team.html
+++ b/templates/team.html
@@ -95,21 +95,21 @@
 
     <div class="profile">
         <figure data-value="SECRETARY">
-            <img src="{{img10}}" alt="">
+            <img src="{{img6}}" alt="">
             <figcaption><strong>Subakrishna B</strong></figcaption>
         </figure>
     </div>
 
     <div class="profile">
         <figure data-value="CO-SECRETARY">
-            <img src="{{img11}}" alt="">
+            <img src="{{img7}}" alt="">
             <figcaption><strong>Suman Girivasan</strong></figcaption>
         </figure>
     </div>
 
     <div class="profile">
         <figure data-value="TREASURER">
-            <img src="{{img12}}" alt="">
+            <img src="{{img8}}" alt="">
             <figcaption><strong>Kaavya Agith</strong></figcaption>
         </figure>
     </div>
@@ -127,21 +127,21 @@
 
     <div class="profile">
         <figure data-value="MEDIA">
-            <img src="{{img10}}" alt="">
+            <img src="{{img9}}" alt="">
             <figcaption><strong>Shankar Nithish Kumar M S</strong></figcaption>
         </figure>
     </div>
 
     <div class="profile">
         <figure data-value="EVENT">
-            <img src="{{img11}}" alt="">
+            <img src="{{img10}}" alt="">
             <figcaption><strong>Madhumita P</strong></figcaption>
         </figure>
     </div>
 
     <div class="profile">
         <figure data-value="TECH">
-            <img src="{{img12}}" alt="">
+            <img src="{{img11}}" alt="">
             <figcaption><strong>Vejaysundaram R</strong></figcaption>
         </figure>
     </div>
@@ -156,7 +156,7 @@
     
     <div class="profile">
         <figure data-value="HR">
-            <img src="{{img12}}" alt="">
+            <img src="{{img13}}" alt="">
             <figcaption><strong>Deepak G L</strong></figcaption>
         </figure>
     </div>
@@ -178,17 +178,16 @@
 
 <main>
 
-
     <div class="profile">
         <figure data-value="MAIL">
-            <img src="{{img11}}" alt="">
+            <img src="{{img14}}" alt="">
             <figcaption><strong>Shephrine Jebarson</strong></figcaption>
         </figure>
     </div>
 
     <div class="profile">
         <figure data-value="YOUTUBE">
-            <img src="{{img12}}" alt="">
+            <img src="{{img15}}" alt="">
             <figcaption><strong>Kathirelakkkiyan S</strong></figcaption>
         </figure>
     </div>
@@ -196,20 +195,104 @@
     
     <div class="profile">
         <figure data-value="INSTAGRAM">
-            <img src="{{img12}}" alt="">
+            <img src="{{img16}}" alt="">
             <figcaption><strong>Joel Sam O</strong></figcaption>
         </figure>
     </div>
     
     <div class="profile">
         <figure data-value="WHATSAPP">
-            <img src="{{img12}}" alt="">
+            <img src="{{img17}}" alt="">
             <figcaption><strong>Subash S</strong></figcaption>
         </figure>
     </div>
+    <div class="profile">
+        <figure data-value="MASTER OF CEREMONIES">
+            <img src="{{img18}}" alt="">
+            <figcaption><strong>Nitin V H</strong></figcaption>
+        </figure>
+    </div>
     
+    <div class="profile">
+        <figure data-value="REPORTS">
+            <img src="{{img19}}" alt="">
+            <figcaption><strong>Vaishnavi J</strong></figcaption>
+        </figure>
+    </div>
+
+    <div class="profile">
+        <figure data-value="MAINTENANCE">
+            <img src="{{img20}}" alt="">
+            <figcaption><strong>PrabhaThareni D</strong></figcaption>
+        </figure>
+    </div>
 
 </main>
 
+<br>
+<br>
+<header>
+    <div class="title">
+        <h2>EVENT</h2>
+    </div>
+</header>
+
+<main>
+
+    <div class="profile">
+        <figure data-value="EVERYDAY">
+            <img src="{{img21}}" alt="">
+            <figcaption><strong>Hari Balaji JC</strong></figcaption>
+        </figure>
+    </div>
+
+    <div class="profile">
+        <figure data-value="WEEKLY">
+            <img src="{{img22}}" alt="">
+            <figcaption><strong>SaiGanesh Chintala</strong></figcaption>
+        </figure>
+    </div>
+
+    
+    <div class="profile">
+        <figure data-value="MONTHLY">
+            <img src="{{img23}}" alt="">
+            <figcaption><strong>Manish UJ</strong></figcaption>
+        </figure>
+    </div>
+    
+    <div class="profile">
+        <figure data-value="ONE-TIME">
+            <img src="{{img24}}" alt="">
+            <figcaption><strong>Keerthana MG</strong></figcaption>
+        </figure>
+    </div>
+</main>
+<br>
+<br>
+<header>
+    <div class="title">
+        <h2>TECH</h2>
+    </div>
+</header>
+
+<main>
+
+    <div class="profile">
+        <figure data-value="WEBSITE AND INNOVATION">
+            <img src="{{img25}}" alt="">
+            <figcaption><strong>Sooraj Nikam P</strong></figcaption>
+        </figure>
+    </div>
+
+    <div class="profile">
+        <figure data-value="WEBSITE AND INNOVATION">
+            <img src="{{img26}}" alt="">
+            <figcaption><strong>Vaishnavi Sri S.M</strong></figcaption>
+        </figure>
+    </div>
+
+
+</main>
 </body>
 </html>
