created and restructured images in folder
more to do. started with gallery.html page

--- a/templates/team.html
+++ b/templates/team.html
@@ -28,7 +28,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="/aboutus">Who We Are</a></li>
-                <li><a href="#masterpiece-moments">Masterpiece Moments</a></li>
+                <li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
                 <li><a href="/team">The Entrepreneurs Within</a></li>
                 <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
               </ul>
