--- a/templates/index.html
+++ b/templates/index.html
@@ -1,110 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>E-Cell of Rajalakshmi Engineering College</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <link rel="icon" type="image/x-icon" href="static/images/icons/logo.png">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="static/style.css">
-
-  <style>
-    body {
-      background-image: url({{imgbg}});
-    }
-
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/style.css">
+    <link rel="icon" type="image/x-icon" href="static/images/icons/logo.png">
+ 
+    <title>E-Cell of REC</title>
 </head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
-
-<nav class="navbar navbar-dark bg-dark navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle"  data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar" color:white></span>></span>
-        <span class="icon-bar" color:white></span>
-        <span class="icon-bar" color:white></span>                        
-      </button>
-      <a class="navbar-brand" href="/">E-Cell of REC</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <strong>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Home</a></li>
-        <li><a href="/aboutus">Who We Are</a></li>
-        <li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
-        <li><a href="/team">The Entrepreneurs Within</a></li>
-        <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
-      </ul>
-    </strong>
-    </div>
+<body>
+  <div class="topnav" id="myTopnav">
+    <a href="#home" class="active">Home</a>
+    <a href="#news">Our Jortnery</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
   </div>
-</nav>
-
-<div id="home" class="section">
-  <div class="hero">
-    
-    <div class="lamp-container">    
-      <img src="{{img1}}" alt="" class="lamp">
-        <img src="{{img2}}" alt="" class="light" id="light">
-    </div>
-    <input type="checkbox" id="pull-chain"  />
-      <div id="chain">
-        <label for="pull-chain" id="handle"></label>
-      </div>
-    <div class="text-container">
-      
-      <h1>Entrepreneurship <br> Development Cell</h1>
-      
-      <p class="subtitle">EXPLORE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; INCUBATE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; INNOVATE</p>
-    </div>
-    
-</div>
-</div>
-<div id="who-we-are" class="section">
-      
-      <div id="we_are">
-        <h1>Who We Are</h1>
-        <p>
-          
-      The Entrepreneurship development cell of REC is committed to creating a high-impact entrepreneurial ecosystem and expanding it to society through initiatives like interactive sessions, competitions, conferences, and business incubation services. With close to 25 years of existence, the E-Cell at the College takes pride in having equipped entrepreneurs and their ventures. In the process, EDC had crossed many milestones by creating many first-generation entrepreneurs backing them up during their incubating days.
-      <br><a href="/aboutus" class="learn-more-link" style="padding-left: 90%;">Learn More</a>
-    </p>
-  </div>
-      <div class="vision-mission">
-        <div class="vision-mission-item">
-          <h2>Vision</h2>
-          <p>
-            To identify and empower Student Entrepreneurs for Job Creation and Wealth Generation aiding in the development of the nation.To create an entrepreneurial ecosystem that provides the platform for individuals with creative minds and ideas with potential for substantial business opportunities.
-          
-          </p>
+    <div class="gradient-background">
+    <div class="entry-animation">
+        <div class="header">
+            <h1 class="logo">Entrepreneurship Development Cell</h1>
+            <p class="tagline">EXPLORE...........INNOVATE.............INCUBATE</p>
         </div>
-
-        <div class="vision-mission-item">
-          <h2>Mission</h2>
-          <p>
-            
-            To pragmatically educate the various nuances of Entrepreneurship imbibed with talent nourishment and capacity building. To provide the right environment and identify opportunities to develop and empower globally competent entrepreneurs.
-            To set up an ecosystem for experimenting, learning, and to incubate companies in their early stages of growth.
-          </p>
-        </div>
-      </div>
     </div>
-  </div>
-
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-<script src="static/index.js"></script>
 
 </body>
 </html>
