--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="topnav" id="myTopnav">
     <a href="#home" class="active">Home</a>
-    <a href="#news">Our Jortnery</a>
-    <a href="#contact">Contact</a>
+    <a href="#news">Our Jornery</a>
+    <a href="#contact"></a>
     <a href="#about">About</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
