--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/style.css">
     <link rel="icon" type="image/x-icon" href="static/images/icons/logo.png">
- 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>E-Cell of REC</title>
 </head>
 <body>
-  <div class="topnav" id="myTopnav">
-    <a href="#home" class="active">Home</a>
-    <a href="#news">Our Jornery</a>
-    <a href="#contact"></a>
-    <a href="#about">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
+  <nav class="navbar navbar-dark bg-dark navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">E-Cell of REC</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/aboutus">Who We Are</a></li>
+                <li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
+                <li><a href="/team">The Entrepreneurs Within</a></li>
+                <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
     <div class="gradient-background">
     <div class="entry-animation">
         <div class="header">
