--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
+  background: linear-gradient(to right, #1c81c4, #ed2b15);
   overflow: hidden; 
 }
 
