--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -7,7 +7,6 @@
   <title>EDC Evolution</title>
   <link rel="stylesheet" href="static/about.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<style>
@@ -19,29 +18,19 @@
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-	<nav class="navbar navbar-dark bg-dark navbar-fixed-top">
-	  <div class="container-fluid">
-		<div class="navbar-header">
-		  <button type="button" class="navbar-toggle"  data-toggle="collapse" data-target="#myNavbar">
-			<span class="icon-bar" color:white></span>></span>
-			<span class="icon-bar" color:white></span>
-			<span class="icon-bar" color:white></span>                        
-		  </button>
-		  <a class="navbar-brand" href="/">E-Cell of REC</a>
-		</div>
-		<div class="collapse navbar-collapse" id="myNavbar">
-		  <strong>
-		  <ul class="nav navbar-nav">
-			<li class="active"><a href="/">Home</a></li>
-			<li><a href="/aboutus">Who We Are</a></li>
-			<li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
-			<li><a href="/team">The Entrepreneurs Within</a></li>
-			<li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
-		  </ul>
-		</strong>
-		</div>
-	  </div>
-	</nav>	  
+	<nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">WebSiteName</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/">Page 1</a></li>
+            <li><a href="#">Page 2</a></li>
+            <li><a href="#">Page 3</a></li>
+          </ul>
+        </div>
+      </nav>	  
 	  <div class="intro">
 		<h1>Footprints in Time</h1>
 	  </div>
