--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -18,27 +18,19 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-    <nav class="navbar navbar-dark bg-dark navbar-fixed-top">
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">E-Cell of REC</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/aboutus">Who We Are</a></li>
-                    <li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
-                    <li><a href="/team">The Entrepreneurs Within</a></li>
-                    <li><a href="#visionvault-exchange">VisionVault Exchange</a></li>
-                </ul>
-            </div>
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">WebSiteName</a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/">Page 1</a></li>
+            <li><a href="#">Page 2</a></li>
+            <li><a href="#">Page 3</a></li>
+          </ul>
         </div>
-    </nav>
+      </nav>
     <br>
     <br>
     <h1>Event Photo Galleries</h1>
